--- a/gpu-simulator/Makefile
+++ b/gpu-simulator/Makefile
@@ -42,6 +42,8 @@ else
 	CXXFLAGS = -Wall -O3 -g3 -fPIC -std=c++11
 endif
 
+include /home/pan251/accel-sim-framework/gpu-simulator/gpgpu-sim/src/graphics/Makefile.include
+
 all: $(BIN_DIR)/accel-sim.out
 
 $(BUILD_DIR)/main.makedepend: depend makedirs
@@ -60,7 +62,7 @@ checkenv: makedirs
 	fi
 
 $(BIN_DIR)/accel-sim.out: trace-driven trace-parser gpgpu-sim makedirs $(BUILD_DIR)/main.o version
-	$(CXX) -std=c++0x -o $(BIN_DIR)/accel-sim.out  -L$(GPGPUSIM_ROOT)/lib/$(GPGPUSIM_CONFIG)/ -lcudart -lm -lz -lGL -pthread $(BUILD_DIR)/*.o
+	$(CXX) -std=c++0x -o $(BIN_DIR)/accel-sim.out -L$(GPGPUSIM_ROOT)/lib/$(GPGPUSIM_CONFIG)/ -lcudart -lm -lz -L/home/pan251/emerald/gem5-graphics/mesa/lib/gallium/ -lGL -pthread $(BUILD_DIR)/*.o -ldl
 
 $(BUILD_DIR)/main.o: main.cc version
 	$(CXX) $(CXXFLAGS)  -I$(BUILD_DIR) -I./trace-driven -I./trace-parser -I$(GPGPUSIM_ROOT)/libcuda -I$(GPGPUSIM_ROOT)/src -I$(CUDA_INSTALL_PATH)/include -c main.cc -o $(BUILD_DIR)/main.o
